--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^7.1.22",
     "@react-navigation/native-stack": "^7.8.2",
     "@supabase/supabase-js": "^2.86.0",
+    "expo-local-authentication": "^17.0.7",
     "formik": "^2.4.9",
     "react": "19.1.1",
     "react-native": "0.82.1",
