--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -3,7 +3,7 @@ name: Android CI
 on:
   push:
     branches:
-      - developer
+      - development     
       - main
       - Omar
 
@@ -12,34 +12,40 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      # 1. Checkout del repo
+      - uses: actions/checkout@v4
 
+      # 2. JDK para Gradle
       - name: Set up JDK
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           distribution: temurin
-          java-version: 17
+          java-version: '17'
 
+      # 3. Reconstruir el keystore desde el secret Base64
       - name: Decode Keystore
-        run: echo "$KEYSTORE_BASE64" | base64 --decode > android/release-keystore.jks
         env:
           KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
+        run: echo "$KEYSTORE_BASE64" | base64 --decode > android/release-keystore.jks
 
+      # 4. Node para ejecutar npm
       - name: Install Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: '18'
 
+      # 5. Instalar dependencias
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
+      # 6. Construir el APK de release
       - name: Build Release APK
-        run: |
-          cd android
-          ./gradlew assembleRelease
+        working-directory: android
+        run: ./gradlew assembleRelease
 
+      # 7. Subir el APK como artefacto
       - name: Upload APK
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: MiBilleteraU-release-apk
           path: android/app/build/outputs/apk/release/app-release.apk
