--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -38,12 +38,14 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      # 6. Construir el APK de release
+      - name: Make gradlew executable
+        working-directory: android
+        run: chmod +x gradlew
+
       - name: Build Release APK
         working-directory: android
         run: ./gradlew assembleRelease
 
-      # 7. Subir el APK como artefacto
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
